Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
Description
reactos-bootcd-0.4.15-dev-5130-gc1c1279-x86-gcc-lin-dbg
- Open EventViewer
- Select a line
- Right click on another line
- "No Items in ListView" error message appears multiple time without reason
Note : This is an "Error" message shown as "Information" (should not use MB_ICONINFORMATION)

Symptom : https://github.com/reactos/reactos/blob/master/base/applications/mscutils/eventvwr/evtdetctl.c#L199
Attachments
Issue Links
- blocks
-
CORE-20023 Event Viewer (eventvwr) meta bug
-
- Reopened
-